--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ Horse/Rocker_Horse/
 Horse/Walker_Horse/Single_crank/
 Horse/Walker_Horse/Double_crank/Horse_Generator/
 Horse/Walker_Horse/Double_crank/Horse/Drivers/
+Horse/Walker_Horse/Double_crank/Horse/Middlewares/
 Horse/Walker_Horse/Double_crank/Horse/build/
