--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ Horse/Walker_Horse/Double_crank/Horse_Generator/
 Horse/Walker_Horse/Double_crank/Horse/Drivers/
 Horse/Walker_Horse/Double_crank/Horse/Middlewares/
 Horse/Walker_Horse/Double_crank/Horse/build/
+Horse/Walker_Horse/Hub_motor/Horse_Generator/
+Horse/Walker_Horse/Hub_motor/Horse/Drivers/
+Horse/Walker_Horse/Hub_motor/Horse/Middlewares/
+Horse/Walker_Horse/Hub_motor/Horse/build/
